src/objects/Engagement__c.object
<CustomObject><fields>
        <fullName>Create_Campaign_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this engagement create a Campaign Member in the specified Campaign afterwards?</description>
        <inlineHelpText>Should this engagement create a Campaign Member in the specified Campaign afterwards?</inlineHelpText>
        <label>Create Campaign Member?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this engagement create a Case afterwards?</description>
        <inlineHelpText>Should this engagement create a Case afterwards?</inlineHelpText>
        <label>Create Case?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <description>The date this engagement ends.</description>
        <inlineHelpText>The date this engagement ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Engagement_Add_Report__c</fullName>
        <description>Subscribers report</description>
        <inlineHelpText>Subscribers report</inlineHelpText>
        <label>Engagement Add Report</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Engagement_Exit_Report__c</fullName>
        <description>Unsubscribers report</description>
        <inlineHelpText>Unsubscribers report</inlineHelpText>
        <label>Engagement Exit Report</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Engagement_Name__c</fullName>
        <label>Engagement Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc SMS Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass SMS Message</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Planned_Message_1_Date__c</fullName>
        <description>Some future date for this engagement (one-time send)</description>
        <inlineHelpText>Some future date for this engagement (one-time send)</inlineHelpText>
        <label>Planned Message 1 Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <description>The date this engagement begins.</description>
        <inlineHelpText>The date this engagement begins.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Engagement</label><nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>Engagement ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Engagements</pluralLabel><sharingModel>ReadWrite</sharingModel><recordTypes>
        <fullName>ASU_Advisor_Outreach</fullName>
        <active>true</active>
        <description>Used for Academic Advisor engagements</description>
        <label>ASU Advisor Outreach</label>
    </recordTypes><recordTypes>
        <fullName>ASU_Coach_Outreach</fullName>
        <active>true</active>
        <description>Used for Success Coach Engagements</description>
        <label>ASU Coach Outreach</label>
    </recordTypes><recordTypes>
        <fullName>None</fullName>
        <active>true</active>
        <description>Use this record type to control whether or not advisor/coach see templates.</description>
        <label>None</label>
    </recordTypes></CustomObject>